src/main/resources/Patterns/CircuitBreaker/istio/circuit-breaker-test.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service-circuit-breaker
  namespace: user
spec:
  host: teastore-auth.user.svc.cluster.local
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 20
        maxRequestsPerConnection: 1
      tcp:
        maxConnections: 100
    outlierDetection:
      consecutive5xxErrors: 3
      interval: 5s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
